--- a/index.html
+++ b/index.html
@@ -5,40 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+  <link rel= "stylesheet" type="text/css" href="/styles.css">
+  <title>Frontend Mentor | Social Media Dashborad</title>
 
 </head>
 <body>
-
-  Social Media Dashboard
-  Total Followers: 23,004
-
+<nav>
+  <div class="social-title">
+  <h1>Social Media Dashboard</h1>
+  <p>Total Followers: 23,004</p>
+  </div>
+<div class="toggle">
   Dark Mode
-
+</div>
+</nav>
   
+<div class="section1-container">
+  <div class="sub-section1">
+    <img src="/images/icon-facebook.svg"><span>@nathanf</span>
+      <h1 class="sub-section-heading">1987</h1>
+      <p class ="followers">Followers</p>
+       <p clas ="today">12 Today</p>
+  </div>
 
-  @nathanf
-  1987
-  Followers
-  12 Today
+  <div class="sub-section1">
+      <img src="/images/icon-twitter.svg"><span>@nathanf</span>
+       <h1 class="sub-section-heading"> 1044 </h1>
+        <p class ="followers"> Followers </p>
+          <p class="today">  99 Today </p>
+  </div>
 
-  @nathanf
-  1044
-  Followers
-  99 Today
+  <div class="sub-section1">
+     <img src="/images/icon-instagram.svg"><span>@realnathanf</span>
+       <h1 class="sub-section-heading"> 11k</h1>
+        <p class="followers">Followers </p>
+          <p class ="today">1099 Today </p>
+  </div>
 
-  @realnathanf
-  11k
-  Followers
-  1099 Today
+  <div class="class">
+    <img src="/images/icon-youtube.svg"> <span>Nathan F.</span>
+      <h1 class ="sub-section-heading">8239</h1>
+      <p class="followers">Subscribers</p>
+        <p class="today"> 144 Today </p>
+  </div>
 
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
-
-
+</div>
 
   Overview - Today
 
