--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
 
 </head>
 <body>
-<nav>
+<div class="top-section">
   <div class="social-title">
   <h1>Social Media Dashboard</h1>
-  <p>Total Followers: 23,004</p>
+  <p class="total-followers">Total Followers: 23,004</p>
   </div>
 <div class="toggle">
-  Dark Mode
+  <input type="checkbox" class="checkbox" id="checkbox1">
+   <label class="label" for="checkbox1">
+    <div class="ball"></div>
+  </label>
 </div>
-</nav>
-  
+</div>
 <div class="section1-container">
   <div class="sub-section1">
-    <img src="/images/icon-facebook.svg"><span>@nathanf</span>
+    <img src="/images/icon-facebook.svg"> <span>@nathanf</span>
       <h1 class="sub-section-heading">1987</h1>
       <p class ="followers">Followers</p>
        <p clas ="today">12 Today</p>
   </div>
 
   <div class="sub-section1">
-      <img src="/images/icon-twitter.svg"><span>@nathanf</span>
+      <img src="/images/icon-twitter.svg"> <span>@nathanf</span>
        <h1 class="sub-section-heading"> 1044 </h1>
         <p class ="followers"> Followers </p>
           <p class="today">  99 Today </p>
@@ -42,7 +44,7 @@
           <p class ="today">1099 Today </p>
   </div>
 
-  <div class="class">
+  <div class="sub-section1">
     <img src="/images/icon-youtube.svg"> <span>Nathan F.</span>
       <h1 class ="sub-section-heading">8239</h1>
       <p class="followers">Subscribers</p>
@@ -84,10 +86,10 @@
   Total Views
   1407
   12%
-  
-  <div class="attribution">
+  <footer>
+  <P class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Your Name Here</a></P>
+  </footer>
 </body>
 </html>
