--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <p class="total-followers">Total Followers: 23,004</p>
   </div>
 <div class="toggle">
-  <input type="checkbox" class="checkbox" id="checkbox1">
-   <label class="label" for="checkbox1">
+  <input type="checkbox" class="checkbox" id="checkbox">
+   <label class="label" for="checkbox">  
     <div class="ball"></div>
-  </label>
+   </label>
 </div>
 </div>
 <div class="section1-container">
@@ -27,65 +27,147 @@
     <img src="/images/icon-facebook.svg"> <span>@nathanf</span>
       <h1 class="sub-section-heading">1987</h1>
       <p class ="followers">Followers</p>
-       <p clas ="today">12 Today</p>
+      <img src="/images/icon-up.svg" alt="up icon"><span class ="today">12 Today</span>
   </div>
 
   <div class="sub-section1">
       <img src="/images/icon-twitter.svg"> <span>@nathanf</span>
        <h1 class="sub-section-heading"> 1044 </h1>
         <p class ="followers"> Followers </p>
-          <p class="today">  99 Today </p>
+        <img src="/images/icon-up.svg" alt="up icon"> <span class="today">  99 Today </span>
   </div>
 
   <div class="sub-section1">
      <img src="/images/icon-instagram.svg"><span>@realnathanf</span>
        <h1 class="sub-section-heading"> 11k</h1>
         <p class="followers">Followers </p>
-          <p class ="today">1099 Today </p>
+        <img src="/images/icon-up.svg" alt="up icon"><span class ="today">1099 Today </span>
   </div>
 
   <div class="sub-section1">
     <img src="/images/icon-youtube.svg"> <span>Nathan F.</span>
       <h1 class ="sub-section-heading">8239</h1>
       <p class="followers">Subscribers</p>
-        <p class="today"> 144 Today </p>
+       <img src="/images/icon-down.svg" alt=" down icon"><span class="today"> 144 Today </span>
   </div>
 
 </div>
 
-  Overview - Today
+<h1 class="social-title">Overview - Today</h1>
+<div class=" section2-container">
+  <div class="sub-section2">
+    <div class="inner-sub-sectiion">
+  <p class="">Page Views</p>
+  <br>
+  <p class="number">87</p>
+  </div>
+  <div class="inner-sub-section">
+    <img src="/images/icon-facebook.svg" alt="facebook icon">
+    <br>
+    <br>
+    <img src="/images/icon-up.svg" alt="up icon"><span class="" >3%</span>
+  </div>
+  </div>
 
-  Page Views
-  87
-  3%
 
-  Likes
-  52
-  2%
+  <div class="sub-section2">
+    <div class="inner-sub-sectiion">
+  <p class="">Likes</p>
+  <br>
+  <p class="number">52</p>
+  </div>
+  <div class="inner-sub-section">
+    <img src="/images/icon-facebook.svg" alt="facebook icon">
+    <br>
+    <br>
+    <img src="/images/icon-down.svg" alt="up icon"><span class="" >2%</span>
+  </div>
+  </div>
 
-  Likes
-  5462
-  2257%
 
-  Profile Views
-  52k
-  1375%
+  <div class="sub-section2">
+    <div class="inner-sub-sectiion">
+  <p class="">  Likes</p>
+  <br>
+  <p class="number">5462</p>
+  </div>
+  <div class="inner-sub-section">
+    <img src="/images/icon-instagram.svg" alt="instagram icon">
+    <br>
+    <br>
+    <img src="/images/icon-up.svg" alt="up icon"><span class="" >2257%</span>
+  </div>
+  </div>
 
-  Retweets
-  117
-  303%
+  <div class="sub-section2">
+    <div class="inner-sub-sectiion">
+  <p class="">Profile Views</p>
+  <br>
+  <p class="number">52K</p>
+  </div>
+  <div class="inner-sub-section">
+    <img src="/images/icon-instagram.svg" alt="instagram icon">
+    <br>
+    <br>
+    <img src="/images/icon-up.svg" alt="up icon"><span class="" >1375%</span>
+  </div>
+  </div>
 
-  Likes
-  507
-  553%
+  <div class="sub-section2">
+    <div class="inner-sub-sectiion">
+  <p class="">Retweets</p>
+  <br>
+  <p class="number">117</p>
+  </div>
+  <div class="inner-sub-section">
+    <img src="/images/icon-twitter.svg" alt="twitter icon">
+    <br>
+    <br>
+    <img src="/images/icon-up.svg" alt="up icon"><span class="" >303%</span>
+  </div>
+  </div>
 
-  Likes
-  107
-  19%
+  <div class="sub-section2">
+    <div class="inner-sub-sectiion">
+  <p class="">Likes</p>
+  <br>
+  <p class="number">507</p>
+  </div>
+  <div class="inner-sub-section">
+    <img src="/images/icon-twitter.svg" alt="twitter icon">
+    <br>
+    <br>
+    <img src="/images/icon-up.svg" alt="up icon"><span class="" >553%</span>
+  </div>
+  </div>
 
-  Total Views
-  1407
-  12%
+  <div class="sub-section2">
+    <div class="inner-sub-sectiion">
+  <p class="">Likes</p>
+  <br>
+  <p class="number">107</p>
+  </div>
+  <div class="inner-sub-section">
+    <img src="/images/icon-youtube.svg" alt="you tube icon">
+    <br>
+    <br>
+    <img src="/images/icon-down.svg" alt="up icon"><span class="" >19%</span>
+  </div>
+  </div>
+  <div class="sub-section2">
+    <div class="inner-sub-sectiion">
+  <p class="">Total Views</p>
+  <br>
+  <p class="number">1407</p>
+  </div>
+  <div class="inner-sub-section">
+    <img src="/images/icon-youtube.svg" alt=" youtube icon">
+    <br>
+    <br>
+    <img src="/images/icon-up.svg" alt="up icon"><span class="" >12%</span>
+  </div>
+  </div>
+  </div>
   <footer>
   <P class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
