fix social icon

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 </head>
 <body>
-<div class="top-section">
+<div class="title-section">
   <div class="social-title">
   <h1>Social Media Dashboard</h1>
-  <p class="total-followers">Total Followers: 23,004</p>
+  <p class="purple-text">Total Followers: 23,004</p>
   </div>
 <div class="toggle">
   <input type="checkbox" class="checkbox" id="checkbox">
@@ -26,21 +26,21 @@
   <div class="sub-section1">
     <img src="/images/icon-facebook.svg"> <span>@nathanf</span>
       <h1 class="sub-section-heading">1987</h1>
-      <p class ="followers">Followers</p>
+      <p class ="followers-text">Followers</p>
       <img src="/images/icon-up.svg" alt="up icon"><span class ="today">12 Today</span>
   </div>
 
   <div class="sub-section1">
       <img src="/images/icon-twitter.svg"> <span>@nathanf</span>
        <h1 class="sub-section-heading"> 1044 </h1>
-        <p class ="followers"> Followers </p>
+        <p class ="followers-text"> Followers </p>
         <img src="/images/icon-up.svg" alt="up icon"> <span class="today">  99 Today </span>
   </div>
 
   <div class="sub-section1">
      <img src="/images/icon-instagram.svg"><span>@realnathanf</span>
        <h1 class="sub-section-heading"> 11k</h1>
-        <p class="followers">Followers </p>
+        <p class="followers-text">Followers </p>
         <img src="/images/icon-up.svg" alt="up icon"><span class ="today">1099 Today </span>
   </div>
 
@@ -54,10 +54,10 @@
 </div>
 
 <h1 class="social-title">Overview - Today</h1>
-<div class=" section2-container">
-  <div class="sub-section2">
-    <div class="inner-sub-sectiion">
-  <p class="">Page Views</p>
+<div class=" overview-container">
+  <div class="sub-section-overview">
+    <div class="inner-sub-section">
+  <p class="purple-text">Page Views</p>
   <br>
   <p class="number">87</p>
   </div>
@@ -65,14 +65,14 @@
     <img src="/images/icon-facebook.svg" alt="facebook icon">
     <br>
     <br>
-    <img src="/images/icon-up.svg" alt="up icon"><span class="" >3%</span>
+    <img src="/images/icon-up.svg" alt="up icon"><small>3%</small>
   </div>
   </div>
 
 
-  <div class="sub-section2">
-    <div class="inner-sub-sectiion">
-  <p class="">Likes</p>
+  <div class="sub-section-overview">
+    <div class="inner-sub-section">
+  <p class="purple-text">Likes</p>
   <br>
   <p class="number">52</p>
   </div>
@@ -80,42 +80,42 @@
     <img src="/images/icon-facebook.svg" alt="facebook icon">
     <br>
     <br>
-    <img src="/images/icon-down.svg" alt="up icon"><span class="" >2%</span>
+    <img src="/images/icon-down.svg" alt="up icon" class="small-icon"><small >2%</small>
   </div>
   </div>
 
 
-  <div class="sub-section2">
-    <div class="inner-sub-sectiion">
-  <p class="">  Likes</p>
+  <div class="sub-section-overview">
+    <div class="inner-sub-section">
+  <p class="purple-text">  Likes</p>
   <br>
   <p class="number">5462</p>
   </div>
   <div class="inner-sub-section">
-    <img src="/images/icon-instagram.svg" alt="instagram icon">
+    <img src="/images/icon-instagram.svg" alt="instagram icon"> 
     <br>
     <br>
-    <img src="/images/icon-up.svg" alt="up icon"><span class="" >2257%</span>
+    <img src="/images/icon-up.svg" alt="up icon" class="small-icon"><small >2257%</small>
   </div>
   </div>
 
-  <div class="sub-section2">
-    <div class="inner-sub-sectiion">
-  <p class="">Profile Views</p>
+  <div class="sub-section-overview">
+    <div class="inner-sub-section">
+  <p class="purple-text">Profile Views</p>
   <br>
   <p class="number">52K</p>
   </div>
   <div class="inner-sub-section">
-    <img src="/images/icon-instagram.svg" alt="instagram icon">
+    <img src="/images/icon-instagram.svg" alt="instagram icon" >
     <br>
     <br>
-    <img src="/images/icon-up.svg" alt="up icon"><span class="" >1375%</span>
+    <img src="/images/icon-up.svg" alt="up icon" class="small-icon"><small>1375%</small>
   </div>
   </div>
 
-  <div class="sub-section2">
-    <div class="inner-sub-sectiion">
-  <p class="">Retweets</p>
+  <div class="sub-section-overview">
+    <div class="inner-sub-section">
+  <p class="purple-text">Retweets</p>
   <br>
   <p class="number">117</p>
   </div>
@@ -123,13 +123,13 @@
     <img src="/images/icon-twitter.svg" alt="twitter icon">
     <br>
     <br>
-    <img src="/images/icon-up.svg" alt="up icon"><span class="" >303%</span>
+    <img src="/images/icon-up.svg" alt="up icon" class="small-icon"><small>303%</small>
   </div>
   </div>
 
-  <div class="sub-section2">
+  <div class="sub-section-overview">
     <div class="inner-sub-sectiion">
-  <p class="">Likes</p>
+  <p class="purple-text">Likes</p>
   <br>
   <p class="number">507</p>
   </div>
@@ -137,13 +137,13 @@
     <img src="/images/icon-twitter.svg" alt="twitter icon">
     <br>
     <br>
-    <img src="/images/icon-up.svg" alt="up icon"><span class="" >553%</span>
+    <img src="/images/icon-up.svg" alt="up icon" class="samll-icon"><small>553%</small>
   </div>
   </div>
 
-  <div class="sub-section2">
+  <div class="sub-section-overview">
     <div class="inner-sub-sectiion">
-  <p class="">Likes</p>
+  <p class="purple-text">Likes</p>
   <br>
   <p class="number">107</p>
   </div>
@@ -151,27 +151,27 @@
     <img src="/images/icon-youtube.svg" alt="you tube icon">
     <br>
     <br>
-    <img src="/images/icon-down.svg" alt="up icon"><span class="" >19%</span>
+    <img src="/images/icon-down.svg" alt="up icon" class="samll-icon"><small>19%</small>
   </div>
   </div>
-  <div class="sub-section2">
+  <div class="sub-section-overview">
     <div class="inner-sub-sectiion">
-  <p class="">Total Views</p>
+  <p class="purple-text">Total Views</p>
   <br>
   <p class="number">1407</p>
   </div>
   <div class="inner-sub-section">
-    <img src="/images/icon-youtube.svg" alt=" youtube icon">
+    <img src="/images/icon-youtube.svg" alt=" youtube icon" class="small-icon">
     <br>
     <br>
-    <img src="/images/icon-up.svg" alt="up icon"><span class="" >12%</span>
+    <img src="/images/icon-up.svg" alt="up icon"><small>12%</small>
   </div>
   </div>
   </div>
   <footer>
   <P class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a></P>
+    Coded by <a href="#">Moses</a></P>
   </footer>
 </body>
 </html>
