--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <h1>Social Media Dashboard</h1>
   <p class="purple-text">Total Followers: 23,004</p>
   </div>
-<div class="toggle">
-  <input type="checkbox" class="checkbox" id="checkbox">
-   <label class="label" for="checkbox">  
-    <div class="ball"></div>
+<div class="toggle-container">
+  <input type="checkbox" class="checkbox" id="switch">
+   <label class="label" for="switch">  
+    <!-- <div class="ball"></div> -->
    </label>
 </div>
 </div>
