--- a/index.html
+++ b/index.html
@@ -15,45 +15,44 @@
   <h1>Social Media Dashboard</h1>
   <p class="purple-text">Total Followers: 23,004</p>
   </div>
-<div class="toggle-container">
+<div class="toggle-container"></div>
+  <p class="purple-text">Dark mode</p>
   <input type="checkbox" class="checkbox" id="switch">
-   <label class="label" for="switch">  
-    <!-- <div class="ball"></div> -->
-   </label>
+   <label class="label" for="switch">
 </div>
 </div>
-<div class="section1-container">
-  <div class="sub-section1">
-    <img src="/images/icon-facebook.svg"> <span>@nathanf</span>
-      <h1 class="sub-section-heading">1987</h1>
+<div class="total-followers-container">
+  <div class="total-followers-card   facebook-card">
+    <div class="username"><img src="/images/icon-facebook.svg"> <span>@nathanf</span></div>
+      <h1 class="total-followers-heading">1987</h1>
       <p class ="followers-text">Followers</p>
-      <img src="/images/icon-up.svg" alt="up icon"><span class ="today">12 Today</span>
+      <img src="/images/icon-up.svg" alt="up icon"><span class ="today"> 12 Today</span>
   </div>
 
-  <div class="sub-section1">
-      <img src="/images/icon-twitter.svg"> <span>@nathanf</span>
-       <h1 class="sub-section-heading"> 1044 </h1>
+  <div class="total-followers-card twitter-card">
+     <div class="username"><img src="/images/icon-twitter.svg" alt="twitter icon"> <span>@nathanf</span></div>
+       <h1 class="total-followers-heading"> 1044 </h1>
         <p class ="followers-text"> Followers </p>
         <img src="/images/icon-up.svg" alt="up icon"> <span class="today">  99 Today </span>
   </div>
 
-  <div class="sub-section1">
-     <img src="/images/icon-instagram.svg"><span>@realnathanf</span>
-       <h1 class="sub-section-heading"> 11k</h1>
+  <div class="total-followers-card instagram-card">
+     <div class="username"><img src="/images/icon-instagram.svg" alt="instagram icon"><span> @realnathanf</span></div>
+       <h1 class="total-followers-heading"> 11k</h1>
         <p class="followers-text">Followers </p>
-        <img src="/images/icon-up.svg" alt="up icon"><span class ="today">1099 Today </span>
+        <img src="/images/icon-up.svg" alt="up icon"><span class ="today"> 1099 Today </span>
   </div>
 
-  <div class="sub-section1">
-    <img src="/images/icon-youtube.svg"> <span>Nathan F.</span>
-      <h1 class ="sub-section-heading">8239</h1>
-      <p class="followers">Subscribers</p>
+  <div class="total-followers-card youtube-card">
+    <div class="username"><img src="/images/icon-youtube.svg" alt="youtube icon"> <span> Nathan F.</span></div>
+      <h1 class ="total-followers-heading">8239</h1>
+      <p class="followers-text">Subscribers</p>
        <img src="/images/icon-down.svg" alt=" down icon"><span class="today"> 144 Today </span>
   </div>
 
 </div>
 
-<h1 class="social-title">Overview - Today</h1>
+<h1 class="overview-title">Overview - Today</h1>
 <div class=" overview-container">
   <div class="sub-section-overview">
     <div class="inner-sub-section">
